--- a/ibs.css
+++ b/ibs.css
@@ -18,8 +18,30 @@
 }
 .boton{
     border: 1px;
-    
+    border-color: lightblue;
+    font-family: Verdana;
+    font-size: 10px;
+    width: 50%;
 }
 .boton:hover{
     cursor: pointer;
+}
+li:hover{
+    background-color: #FFFCEF;
+
+}
+.capa{
+    width: 100px; 
+    height: 100px;
+    top: 96px;
+    left: 96px;
+    background-color: red;
+    position: absolute;
+}
+.texto{
+    font-weight: bold;
+    font-style: italic, ;
+    font-family: Verdana;
+    font-size: 12px;
+    text-decoration: underline;
 }
