--- a/Actividad2/style.css
+++ b/Actividad2/style.css
@@ -101,7 +101,7 @@
 
   .line{
     position: relative;
-    width: 99%;
+    width: 100%;
     height: 3px;
     border: 3px;
     background-color: lightgray;
@@ -175,11 +175,434 @@
     background-color: rgb(250, 81, 59);
     color: white;
   }
-  .menuitemrectangle{
-    position: absolute;
-    font-size: larger;
+  .menuitemtextrectangle{
+    font-size: small;
     font-family: Arial;
     font-weight: bold;
   }
 
+  .alerts{
+    position: relative;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+
+  .alertbox{
+    position: relative;
+    height: 30px;
+    width: 100%;
+    margin-top: 10px;
+    background-color: rgb(244, 245, 247);
+    border: 1px solid rgb(223, 224, 229);
+  }
+
+  .alertboxpicture{
+    position: absolute;
+    height: 30px;
+    width: 30px;
+    left: 100px;
+  }
+
+  .alertboxtext{
+    position: absolute;
+    height: 30px;
+    width: 400px;
+    top: 5px;
+    left: 150px;
+    font-size: larger;
+    font-family: Arial;
+    font-weight: bold;
+    color: rgb(140, 140, 140);
+  }
+
+  .alertformbox{
+    position: relative;
+    height: 615px;
+    width: 800px;
+    top: 30px;
+    margin-bottom: 50px;
+    border: 1px solid rgb(223, 224, 229);
+    display: block;
+    justify-content: center;
+  }
+
+  .alertboxmenuitem{
+    position: relative;
+    height: 50px;
+    width: 100%;
+    border: 1px solid rgb(223, 224, 229);
+  }
+
+  .checkboxposition{
+      position: absolute;
+      top: 5px;
+      left: 5px;
+  }
+
+  .alertboxmenuitem1{
+      position: absolute;
+      left: 50px;
+      height: 50px;
+      width: 150px;
+      background-color: tomato;
+      text-align: center;
+  }
+
+  .alertboxmenuitemmessage{
+    position: absolute;
+    top: 15px;
+    left: 25px;
+    height: 50px;
+    color: white;
+    font-family: Arial;
+  }
+
+  .alertboxmenuitem2{
+    position: absolute;
+    left: 200px;
+    height: 50px;
+    width: 75px;
+    text-align: center;
+  }
+
+  .alertboxmenuitem3{
+    position: absolute;
+    left: 275px;
+    height: 49px;
+    width: 75px;
+    text-align: center;
+    background-color: rgb(223, 224, 229);
+    border: 1px solid rgb(200, 200, 200);
+  }
+
+  .alertboxmenuitemmessage2{
+    position: absolute;
+    top: 15px;
+    left: 20px;
+    height: 50px;
+    font-family: Arial;
+    color: rgb(140, 140, 140);
+  }
+
+  .alertboxdot {
+    height: 25px;
+    width: 25px;
+    top: -15px;
+    right: 0px;
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(250, 81, 59);
+    border-radius: 50%;
+  }
+
+  .alertboxdottext {
+    position: absolute;
+    color: white;
+    font-size: medium;
+    font-weight: bold;
+  }
+
+  .alertboxmenuitemsearch{
+    position: absolute;
+    height: 20px;
+    width: 175px;
+    top: 14px;
+    right: 50px;
+    float: right;
+  }
+
+  .alertboxmenuiteminput{
+    position: absolute;
+    height: 20px;
+    width: 175px;
+  }
+
+  .fa-search{
+    position: absolute;
+    height: 20px;
+    width: 20px;
+    top: 5px;
+    right: -5px;
+    float: right;
+  }
+
+  .fa-search:hover{
+      cursor: pointer;
+  }
+
+  .alertboxitem{
+    position: relative;
+    height: 50px;
+    width: 100%;
+    border: 1px solid rgb(223, 224, 229);
+  }
+
+  .alertboxitemcontent{
+    position: relative;
+    height: 250px;
+    width: 100%;
+    background-color: rgb(240, 240, 240);
+    border: 1px solid rgb(223, 224, 229);
+  }
+
+  .alertboxitemmail{
+    position: absolute;
+    height: 40px;
+    width: 500px;
+    top: 5px;
+    left: 50px;
+  }
+
+  .alertboxitemdot{
+    height: 20px;
+    width: 20px;
+    top: 10px;
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+  }
+
+  .dotred{
+    background-color: rgb(250, 81, 59);
+  }
+
+  .dotgray{
+    background-color: rgb(140, 140, 140);
+  }
+
+  .alertboxitemmailname{
+    height: 20px;
+    width: 150px;
+    top: 10px;
+    left: 35px;
+    position: absolute;
+    font-size: large;
+    font-weight: bold;
+    font-family: Arial;
+    color: rgb(140, 140, 140);
+  }
   
+  .alertboxitemmailtitle{
+    height: 20px;
+    width: 280px;
+    top: 10px;
+    right: 0px;
+    float: right;
+    position: absolute;
+    font-size: large;
+    font-family: Arial;
+    color: rgb(140, 140, 140);
+  }
+
+  .alertboxitemdate{
+    height: 20px;
+    width: 150px;
+    top: 15px;
+    right: 40px;
+    float: right;
+    position: absolute;
+    font-size: large;
+    font-family: Arial;
+    color: rgb(140, 140, 140);
+  }
+
+  .chevron{
+    height: 20px;
+    width: 20px;
+    top: 20px;
+    right: 20px;
+    float: right;
+    position: absolute;
+    color: rgb(140, 140, 140);
+  }
+
+  .alertboxitemformat{
+    height: 100%;
+    width: 80%;
+    margin-left: 10%;
+    margin-right: 10%;
+    position: relative;
+  }
+
+  .alertboxitemtitle{
+    height: 30px;
+    width: 100%;
+    top: 15px;
+    position: absolute;
+    font-size: larger;
+    font-family: Arial;
+    color: rgb(80, 80, 80);
+    
+  }
+
+  .alertboxitemtext{
+    height: 150px;
+    width: 100%;
+    top: 55px;
+    position: absolute;
+    font-size: medium;
+    font-family: Arial;
+    color: rgb(100, 100, 100);
+    
+  }
+
+  .alertboxitembuttonreply{
+    height: 40px;
+    width: 75px;
+    top: 200px;
+    right: 95px;
+    float: right;
+    position: absolute;
+    background-color: rgb(0, 220, 190);
+  }
+
+  .alertboxitembuttondelete{
+    height: 40px;
+    width: 75px;
+    top: 200px;
+    right: 0px;
+    float: right;
+    position: absolute;
+    background-color: rgb(255, 80, 60);
+  }
+
+  .alertboxitembuttonreplytext{
+    height: 20px;
+    width: 100%;
+    top: 12px;
+    text-align: center;
+    position: absolute;
+    font-weight: 600;
+    font-size: small;
+    font-family: Arial;
+    color: rgb(10, 130, 140);
+  }
+
+  .alertboxitembuttondeletetext{
+    height: 20px;
+    width: 100%;
+    top: 12px;
+    text-align: center;
+    position: absolute;
+    font-size: small;
+    font-weight: 600;
+    font-family: Arial;
+    color: white;
+  }
+
+  .alertboxitemprevious{
+      height: 51px;
+      width: 185px;
+      right: 20px;
+      float: right;
+      position: relative;
+      background-color: rgb(200, 200, 200);
+  }
+
+  .alertboxitemprevioustext{
+    height: 20px;
+    width: 100%;
+    top: 15px;
+    text-align: center;
+    position: absolute;
+    font-size: smaller;
+    font-weight: 800;
+    font-family: Arial;
+    color: rgb(140, 140, 140)
+  }
+
+  .reminders{
+    position: relative;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+
+  .remindersbox{
+    position: relative;
+    height: 30px;
+    width: 100%;
+    margin-top: 25px;
+    background-color: rgb(244, 245, 247);
+    border: 1px solid rgb(223, 224, 229);
+  }
+
+  .reminderformbox{
+    position: relative;
+    height: 400px;
+    width: 800px;
+    top: 30px;
+    margin-bottom: 50px;
+    border: 2px solid rgb(223, 224, 229);
+    display: flex;
+    justify-content: center;
+  
+  }
+
+  .reminderboxleft{
+    position: relative;
+    height: 100%;
+    width: 40%;
+    display: flex;
+    justify-content: center;
+  }
+
+  .reminderboxright{
+    position: relative;
+    height: 100%;
+    width: 60%;
+  }
+
+  .reminderboxlefttext{
+    position: absolute;
+    height: 30px;
+    width: 100%;
+    text-align: center;
+    top: 20px;
+    font-size: larger;
+    font-weight: bold;
+    font-family: Arial;
+    color: rgb(140, 140, 140);
+  }
+
+  .reminderboxlefttext2{
+    position: absolute;
+    height: 30px;
+    width: 100%;
+    text-align: center;
+    top: 45px;
+    font-size: medium;
+    font-family: Arial;
+    color: rgb(140, 140, 140);
+  }
+
+  .reminderboxrectangle{
+    position: absolute;
+    height: 50px;
+    width: 80%;
+    top: 75px;
+    background-color: rgb(255, 80, 60);
+
+  }
+
+  .fa-phone-alt{
+    position: absolute;
+    height: 30px;
+    width: 30px;
+    top: 17px;
+    left: 17px;
+    color: white;
+  }
+  
+  input[type="checkbox"]{
+    zoom: 1.75;
+  }
