--- a/Actividad2/style.css
+++ b/Actividad2/style.css
@@ -10,8 +10,6 @@
 
   .logo{
     position: absolute;
-    height: 80px;
-    width: 337px;
     top: 0;
     left: 0;
     float: left;
@@ -73,6 +71,46 @@
     font-weight: bold;
   }
 
+  .fa-bars{
+    zoom: 2.25;
+    position: absolute;
+    height: 20px;
+    width: 20px;
+    top: 10px;
+    right: 5px;
+    float: right;
+    display: none !important;
+  }
+
+  .options {
+    height: 15px;
+    width: 15px;
+    top: -15px;
+    position: relative;
+    display: inline-block;
+}
+  .options-content {
+    top: 20px;  
+    left: -20px;   
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    min-width: 40px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+.options-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+.options:hover .options-content {
+    display: block;
+}
+
   .logout{
     position: absolute;
     height: 41px;
@@ -93,170 +131,6 @@
     font-weight: bold;
     color: tomato;
   }
-
-  
-  @media only screen and (min-width: 1280px) {
-    .container{
-      position: relative;
-      width: 100%;
-      min-width: 1280px;
-      height: 100%;
-    }
-
-    .itemlist{
-      max-width: 870px;
-    }
-
-    .card{
-      height: 125px;
-      width: 250px;
-    }
-
-    .alertformbox{
-      height: 615px;
-      width: 800px;
-    }
-
-    .reminderformbox{
-      height: 400px;
-      width: 800px;
-    }
-
-    .circle-form-box{
-      height: 750px;
-      width: 800px;
-    }
-  }
-
-  @media only screen and (max-width: 1279px) and (min-width: 1024px) {
-    .container{
-      position: relative;
-      width: 100%;
-      min-width: 640px;
-      max-width: 1279px;
-      height: 100%;
-    }
-
-    .itemlist{
-      max-width: 870px;
-    }
-
-    .card{
-      height: 125px;
-      width: 250px;
-    }
-
-    .alertformbox{
-      height: 615px;
-      width: 800px;
-    }
-
-    .reminderformbox{
-      height: 400px;
-      width: 800px;
-    }
-
-    .circle-form-box{
-      height: 750px;
-      width: 800px;
-    }
-  }
-
-  @media only screen and (max-width: 1023px) and (min-width: 640px) {
-    .container{
-      position: relative;
-      width: 100%;
-      min-width: 640px;
-      max-width: 1023px;
-      height: 100%;
-    }
-
-    .itemlist{
-      max-width: 550px;
-    }
-
-    .card{
-      height: 125px;
-      width: 250px;
-    }
-
-    .alertformbox{
-      height: 615px;
-      width: 750px;
-    }
-
-    .reminderformbox{
-      height: 400px;
-      width: 750px;
-    }
-
-    .circle-form-box{
-      height: 750px;
-      width: 750px;
-    }
-
-    .profiletext{
-      display: none;
-    }
-
-    .settingtext{
-      display: none;
-    }
-
-    .logouttext{
-      display: none;
-    }
-
-    .profile{
-      top: 10px;
-      right: 150px;
-    }
-
-    .profilepicture{
-      width: 80px;
-      height: 64px;
-    }
-
-    .profiledot{
-      width: 23px;
-      height: 23px;
-      top: 2px;
-      right: 23px;
-    }
-
-    .setting{
-      top: 20px;
-      right: 110px;
-    }
-
-    .logout{
-      top: 20px;
-      right: 40px;
-    }
-
-  }
-
-  @media only screen and (max-width: 639px) and (min-width: 320px) {
-    .container{
-      position: relative;
-      width: 100%;
-      min-width: 320px;
-      max-width: 639px;
-      height: 100%;
-    }
-
-    .itemlist{
-      width: 100%;
-      max-width: 270px;
-    }
-
-    .card{
-      height: 125px;
-      width: 250px;
-    }
-    
-  }
-  
 
   .line{
     position: relative;
@@ -316,6 +190,13 @@
     align-items: center;
     background-color: rgb(250, 81, 59);
     border-radius: 50%;
+  }
+
+  .menudotnumber{
+    position: absolute;
+    color: white;
+    font-size: medium;
+    font-weight: bold;
   }
 
   .menuitemrectangle{
@@ -473,7 +354,7 @@
   .alertboxmenuiteminput{
     position: absolute;
     height: 20px;
-    width: 175px;
+    width: 100%;
   }
 
   .fa-search{
@@ -817,7 +698,7 @@
     left: 55px;
     position: absolute;
     color: white;
-    font-size: medium;
+    font-size: 0.9em;
     font-family: Arial;
 
   }
@@ -908,8 +789,8 @@
     height: 30px;
     width: 75px;
     top: 135px;
-    right: 140px;
-    float: right;
+    left: 20px;
+    float: left;
     position: absolute;
     background-color: rgb(0, 220, 190);
   }
@@ -918,7 +799,7 @@
     height: 30px;
     width: 75px;
     top: 135px;
-    right: 45px;
+    right: 20px;
     float: right;
     position: absolute;
     background-color: rgb(255, 80, 60);
@@ -965,9 +846,9 @@
 
   .reminder-box-right-top-text{
     height: 20px;
-    width: 220px;
+    width: 100%;
     top: 10px;
-    left: 100px;
+    left: -8px;
     text-align: center;
     position: absolute;
     font-weight:bolder;
@@ -1075,8 +956,8 @@
   }
 
   .circle-form-box{
+    height: auto;
     position: relative;
-
     top: 30px;
     margin-bottom: 50px;
     border: 2px solid rgb(223, 224, 229);
@@ -1096,12 +977,12 @@
   .circle-form-box-top-menu{
     position: relative;
     height: 50px;
-    width: 265px;
+    width: 33.3%;
     border: 1px solid rgb(223, 224, 229);
   }
   .circle-form-box-bottom{
     position: relative;
-    height: 700px;
+    height: auto;
     width: 100%;
     border: 1px solid rgb(223, 224, 229);
     background-color: rgb(240, 240, 240);
@@ -1110,7 +991,7 @@
   .circle-form-box-top-menu-text{
     position: absolute;
     height: 25px;
-    width: 265px;
+    width: 100%;
     top: 15px;
     text-align: center;
     font-size: larger;
@@ -1122,7 +1003,7 @@
     height: 25px;
     width: 25px;
     top: -15px;
-    right: 50px;
+    right: 10%;
     position: absolute;
     display: flex;
     justify-content: center;
@@ -1149,10 +1030,10 @@
 
   .circle-form-box-bottom-box-title{
     height: 30px;
-    width: 40%;
+    width: 60%;
     top: 50px;
-    margin-left: 30%;
-    margin-right: 30%;
+    margin-left: 20%;
+    margin-right: 20%;
     position: absolute;
     background-color: rgb(223, 224, 229);
   }
@@ -1169,7 +1050,7 @@
 
   .circle-form-box-bottom-item-list{
     max-width: 700px;
-    height: 600px;
+    height: auto;
     position: relative;
     display: flex;
     flex-wrap: wrap;
@@ -1281,6 +1162,392 @@
 
   input[type="checkbox"]{
     zoom: 1.75;
+  }
+
+  @media only screen and (min-width: 1280px) {
+    .container{
+      position: relative;
+      width: 100%;
+      min-width: 1280px;
+      height: 100%;
+    }
+
+    .logo{
+      top: 0;
+      height: 80px;
+      width: 337px;
+    }
+
+    .itemlist{
+      max-width: 870px;
+    }
+
+    .circle-form-box-bottom-item-list{
+      max-width: 870px;
+    }
+
+    .card{
+      height: 125px;
+      width: 250px;
+    }
+
+    .alertformbox{
+      height: 615px;
+      width: 800px;
+    }
+
+    .reminderformbox{
+      height: 400px;
+      width: 800px;
+    }
+
+    .circle-form-box-bottom-item-list{
+      width: 800px;
+    }
+  }
+
+  @media only screen and (max-width: 1279px) and (min-width: 1024px) {
+    .container{
+      position: relative;
+      width: 100%;
+      min-width: 640px;
+      max-width: 1279px;
+      height: 100%;
+    }
+
+    .logo{
+      top: 0;
+      height: 80px;
+      width: 337px;
+    }
+
+    .itemlist{
+      max-width: 870px;
+    }
+
+    .circle-form-box-bottom-item-list{
+      max-width: 870px;
+    }
+
+    .card{
+      height: 125px;
+      width: 250px;
+    }
+
+    .alertformbox{
+      height: 615px;
+      width: 800px;
+    }
+
+    .reminderformbox{
+      height: 400px;
+      width: 800px;
+    }
+
+    .circle-form-box-bottom-item-list{
+      width: 800px;
+    }
+  }
+
+  @media only screen and (max-width: 1023px) and (min-width: 640px) {
+    .container{
+      position: relative;
+      width: 100%;
+      min-width: 640px;
+      max-width: 1023px;
+      height: 100%;
+    }
+
+    .logo{
+      top: 0;
+      height: 80px;
+      width: 337px;
+    }
+
+    .itemlist{
+      max-width: 550px;
+    }
+
+    .circle-form-box-bottom-item-list{
+      max-width: 650px;
+    }
+
+    .card{
+      height: 125px;
+      width: 250px;
+    }
+
+    .alertformbox{
+      height: 615px;
+      width: 750px;
+    }
+
+    .reminderformbox{
+      height: 400px;
+      width: 750px;
+    }
+
+    .circle-form-box{
+      width: 750px;
+    }
+
+    .profiletext{
+      display: none;
+    }
+
+    .settingtext{
+      display: none;
+    }
+
+    .logouttext{
+      display: none;
+    }
+
+    .profile{
+      top: 10px;
+      right: 150px;
+    }
+
+    .profilepicture{
+      width: 80px;
+      height: 64px;
+    }
+
+    .profiledot{
+      width: 23px;
+      height: 23px;
+      top: 2px;
+      right: 23px;
+    }
+
+    .setting{
+      top: 20px;
+      right: 110px;
+    }
+
+    .logout{
+      top: 20px;
+      right: 40px;
+    }
+
+    .alertboxtext2{
+      display: none;
+    }
+
+    .circle-form-box-bottom-item-list-card{
+      width: 280px;
+      margin: 20px 10px 20px 10px;
+    }
+
+  }
+
+  @media (max-width: 639px) {
+    .container{
+      position: relative;
+      width: 100%;
+      min-width: 320px;
+      max-width: 639px;
+      height: 100%;
+    }
+
+    .logo{
+      top: 10px;
+      height: 60px;
+      width: 253px;
+    }
+
+    .itemlist{
+      width: 100%;
+      max-width: 400px;
+    }
+
+    .card{
+      height: 200px;
+      width: 400px;
+    }
+
+    .menudot{
+      height: 45px;
+      width: 45px;
+    }
+
+    .menudotnumber{
+      position: absolute;
+      color: white;
+      font-size: xx-large;
+      font-weight: bold;
+    }
+
+    .menuitempicture{
+      height: 160px;
+      width: 160px;
+      top: 20px;
+    }
+
+    .menuitemtext{
+      height: 120px;
+      width: 200px;
+      top: 120px;
+      font-size: x-large;
+    }
+
+    .profiletext{
+      display: none;
+    }
+
+    .settingtext{
+      display: none;
+    }
+
+    .logouttext{
+      display: none;
+    }
+
+    .profile{
+      top: 10px;
+      right: 55px;
+    }
+
+    .profilepicture{
+      width: 80px;
+      height: 64px;
+    }
+
+    .profiledot{
+      width: 23px;
+      height: 23px;
+      top: 2px;
+      right: 23px;
+    }
+    .alertformbox{
+      height: 615px;
+      width: 500px;
+    }
+
+    .reminderformbox{
+      height: 400px;
+      width: 500px;
+    }
+
+    .alertboxmenuitemsearch{
+      right: 30px;
+      width: 100px;
+    }
+
+    .circle-form-box{
+      width: 500px;
+    }
+
+    .circle-form-box-bottom-item-list{
+      max-width: 400px;
+    }
+
+    .circle-form-box-bottom-item-list-card{
+      width: 350px;
+      margin: 20px 25px 20px 25px;
+    }
+
+    .circle-form-box-bottom-item-list-card-name{
+      font-size: x-large;
+    }
+
+    .circle-form-box-bottom-item-list-card-job{
+      font-size: larger;
+    }
+
+    .circle-form-box-bottom-box-title{
+      height: 50px;
+    }
+
+    .alertboxitemtext{
+      font-size: small;
+    }
+
+    .alertboxitemmailtitle{
+      display: none;
+    }
+
+    .alertboxtext2{
+      display: none;
+    }
+
+    .fas fa-th-large{
+      display: none;
+    }
+
+    .fas fa-th-list{
+      display: none;
+    }
+
+    .circle-form-box-top-menu-text{
+      top: 5px;
+      font-size: medium;
+    }
+
+    .table-dot-selected-border{
+      left: -1px;
+      top: 6px;
+      height: 35px;
+      width: 35px;
+    }
+
+    .table-dot-selected{
+      height: 25px;
+      width: 25px;
+    }
+
+    .table-dot-unselected{
+      height: 25px;
+      width: 25px;
+      left: 4px;
+      top: 11px;
+    }
+
+    .reminderboxrectangle{
+      left: 10px;
+      width: 100%;
+    }
+
+    .reminder-box-rectangle-2{
+      left: 10px;
+      width: 100%;
+    }
+
+    .reminder-box-rectangle-3{
+      left: 10px;
+      width: 100%;
+    }
+
+    .reminder-box-rectangle-3-change{
+      width: 65px;
+    }
+
+    .reminder-box-rectangle-3-done{
+      width: 65px;
+    }
+
+    .setting{
+      display: none;
+    }
+
+    .logout{
+      display: none;
+    }
+
+    .setting-in{
+      height: 41px;
+      width: 42px;
+    }
+
+    .logout-in{
+      height: 41px;
+      width: 43px;
+    }
+
+    .fa-bars{
+      display: table !important;
+    }
+    
   }
 
 
